--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
+version: '3.9'
+
 services:
   waha:
     image: devlikeapro/waha:latest
-    restart: always
     ports:
       - "3000:3000"
-    volumes:
-      - ./waha-data:/app/data
     environment:
-      - API_PORT=3000
-      - WORKERS_FOLDER=/app/data/workers
-    dns:
-      - 1.1.1.1
-      - 8.8.8.8
+      - PORT=3000
+      - WAHA_TOKEN=changeme
+      - NODE_ENV=production
+
